# AIcleaner

./: .gitignore  .portmux.json  LICENSE  README.md  build-release.bat  build-release.ps1  build.bat  index.html  package-lock.json  package.json  start-tauri.bat  start-tauri.ps1  start.bat  urls.txt  vite.config.js  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
.codex/: conversation-code-map.json
.playwright-mcp/: page-2026-05-10T16-29-37-045Z.yml
codex_asar/: package.json
codex_asar/webview/: index.html
docs/: advisor-workflow.md  ai-prompts.md  scan-rule-sources.md  testing.md
native/scanner/: Cargo.toml
native/scanner/src/: main.rs
scripts/: download-dust.js  dust_setup.iss  scanner_setup.iss  sync-scanner.mjs  tauri-dev.mjs
scripts/testing/: analyze-diagnostics.ps1  run-classification-smoke.ps1  run-organizer-experiment.ps1
server/: agent.js  content-extractor.js  index.js  json-file.js  organizer.js  privilege.js  remote-control.js  scan-store.js  scanner.js  search.js
server/data/: settings.json
server/routes/: files.js  organize.js  scan.js  settings.js  system.js
skills/prebuild-solution-research/: SKILL.md
src/: App.tsx  main.js  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: advisor_runtime.rs  app_paths.rs  backend.rs  diagnostics.rs  file_representation.rs  lib.rs  llm_protocol.rs  log_cli_support.rs  main.rs  model_boundary.rs  organizer_runtime.rs  persist.rs  reasoning_policy.rs  scan_runtime.rs  system_ops.rs  web_search.rs
(+715 files in other folders)
